[package]
name = "gplayer"
version = "0.1.0"
authors = ["betta-cyber <l21828604@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.10.0"
reqwest = { version = "0.10.1" , features = ["socks"] }
tempfile = "3.1.0"
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3.1"
log = "0.4"
serde = "1.0"
pretty_env_logger = "0.3.1"
minimp3 = "0.3"
bit-set = "0.5"
byteorder = "1.3"
bytes = "0.4"
